// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip should hide when mouse leave antd disabled component Button 1`] = `
<span
  style="display: inline-block; cursor: not-allowed;"
>
  <button
    class="ant-btn"
    disabled=""
    style="pointer-events: none;"
    type="button"
  />
</span>
`;

exports[`Tooltip should hide when mouse leave antd disabled component Switch 1`] = `
<span
  style="display: inline-block; cursor: not-allowed;"
>
  <button
    aria-checked="false"
    class="ant-switch ant-switch-disabled"
    disabled=""
    role="switch"
    style="pointer-events: none;"
    type="button"
  >
    <span
      class="ant-switch-inner"
    />
  </button>
</span>
`;
